# M0TH3RAT3

./: .gitignore  CLAUDE.md  Cargo.toml  README.adoc  README.md  flake.nix  generate.py  justfile
src/: app.rs  login.rs  main.rs  objects.rs  planet.rs  storage.rs  user.rs  util.rs
src/components/: crew.rs  galaxy_map.rs  login.rs  mod.rs  resources.rs  ship_status.rs  star_map.rs
