[package]
name = "M0TH3RAT3"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
strum = { version = "0.26.3", features = ["strum_macros"] }
tachyonfx = "0.15.0"
